<resources>
    <string name="app_name">My Inventory</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="todo">TODO</string>

    <string name="Welcome"> Welcome!</string>
    <string name="Add">Click "Add to Inventory" to create your new Inventory!</string>
    <string name="addToInventory">Add to inventory</string>
    <string name="Or"> Or if you have already one, you can find it here.</string>
    <string name="goToLists">Open Inventory</string>
    <string name="AddNew">"Add new Product to your Inventory" </string>
    <string name="submit">submit</string>
    <string name="product_name">Product Name</string>
    <string name="owner">Owner</string>
    <string name="year_purchased">Year purchased</string>
    <string name="camera">Camera</string>
    <string name="take_picture">Take Picture</string>

</resources>