<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDDFD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/goToAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ice_blue_2"
        android:text="@string/addToInventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="194dp"
        android:layout_height="61dp"
        android:layout_marginTop="128dp"
        android:fontFamily="monospace"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/ice_blue"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/Welcome" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/Add"
        android:textAlignment="center"
        android:textColor="@color/ice_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="@string/Add" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="228dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/Or"
        android:textAlignment="center"
        android:textColor="@color/ice_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToAddProduct"
        tools:text="@string/Or" />

    <Button
        android:id="@+id/goToLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ice_blue_2"
        android:text="@string/goToLists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <View
        android:id="@+id/context_view"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>